--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-540-lava-landing-page
             >
               <h1>Simple App that we <em>CREATE</em></h1>
               <p>
-                MathGuide is an app for students throughout their problem's for solving math.
+                MathGuide is an app for students throughout their problem-solving math.
               </p>
               <a href="#" class="main-button-slider">DOWNLOAD</a>
             </div>
