--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ https://templatemo.com/tm-540-lava-landing-page
 
     <!-- ***** Welcome Area Start ***** -->
     <div class="welcome-area" id="welcome">
+
       <!-- ***** Header Text Start ***** -->
       <div class="header-text">
         <div class="container">
@@ -105,6 +106,7 @@ https://templatemo.com/tm-540-lava-landing-page
       </div>
       <!-- ***** Header Text End ***** -->
     </div>
+    <a href="app-ads.txt">click here</a>
    
 
     <div class="left-image-decor"></div>
